cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_250.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/sha/sha512.c:206: error: DEAD_STORE
  The value written to &md (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/sha/sha512.c:206:15: Write of unused value
204.               *(md++) = (unsigned char)(t >> 48);
205.               *(md++) = (unsigned char)(t >> 40);
206.               *(md++) = (unsigned char)(t >> 32);
                     ^
207.           }
208.           break;
